# resha

./: .resha.yml  .rsha  .rsha.yml  Cargo.toml  README.md  flake.nix
.github/workflows/: build_and_release.yml  build_nix.yml  create_release.yml
src/: entry.rs  error.rs  main.rs  manifest.rs
