[package]
name = "resha"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
duct = "0.13.6"
pathdiff = "0.2.1"
sha2 = "0.10.6"
strict-yaml-rust = "0.1.2"
thiserror = "1.0.38"
walkdir = "2.3.2"
